Basic routing in place, replies are shown within tweets

--- a/client/templates/reply.html
+++ b/client/templates/reply.html
@@ -1,9 +1,8 @@
-<template name="tweet">
-  <h4>{{content.created_at}}</h4>
+<template name="reply">
   <ul>
+    <li><h3>Reply</h3></li>
     <li><strong>Text: </strong>{{content.text}}</li>
     <li><strong>Source: </strong>{{content.source}}</li>
     <li><strong>User: </strong>{{content.user.name}}</li>
-    <li><button class="openTicket">Open Ticket</button></li>
   </ul>
 </template>
