--- a/client/templates/appBody.html
+++ b/client/templates/appBody.html
@@ -1,4 +1,7 @@
 <template name="appBody">
   {{> loginButtons}}
-  {{> yield}}
+  {{#if currentUser}}
+    {{> modal}}
+    {{> yield}}
+  {{/if}}
 </template>
