--- a/client/templates/reply.html
+++ b/client/templates/reply.html
@@ -4,5 +4,10 @@
     <li><strong>Text: </strong>{{content.text}}</li>
     <li><strong>Source: </strong>{{content.source}}</li>
     <li><strong>User: </strong>{{content.user.name}}</li>
+    <li><button class="modal postReply" data-modal-template="postReplyModal">Reply</button></li>
+    <li><button class="openTicket">Open Ticket</button></li>
   </ul>
+  {{#each replies}}
+    {{> reply}}
+  {{/each}}
 </template>
