Add direct message reply ability

--- a/client/templates/message.html
+++ b/client/templates/message.html
@@ -3,6 +3,7 @@
   <ul>
     <li><strong>Text: </strong>{{content.text}}</li>
     <li><strong>User: </strong>{{content.sender_screen_name}}</li>
+    <li><button class="modal postMessageReply" data-modal-template="postReplyMessageModal">Reply</button></li>
     <li><button class="openTicket">Open Ticket</button></li>
   </ul>
 </template>
