--- a/client/templates/message.html
+++ b/client/templates/message.html
@@ -4,6 +4,6 @@
     <li><strong>Text: </strong>{{content.text}}</li>
     <li><strong>User: </strong>{{content.sender_screen_name}}</li>
     <li><button class="modal postMessageReply" data-modal-template="postReplyMessageModal">Reply</button></li>
-    <li><button class="openTicket">Open Ticket</button></li>
+    <li><button class="modal openTicket" data-modal-template="postTicketModal">Open Ticket</button></li>
   </ul>
 </template>
