--- a/client/templates/reply.html
+++ b/client/templates/reply.html
@@ -5,7 +5,7 @@
     <li><strong>Source: </strong>{{content.source}}</li>
     <li><strong>User: </strong>{{content.user.name}}</li>
     <li><button class="modal postReply" data-modal-template="postReplyModal">Reply</button></li>
-    <li><button class="openTicket">Open Ticket</button></li>
+    <li><button class="modal openTicket" data-modal-template="postTicketModal">Open Ticket</button></li>
   </ul>
   {{#each replies}}
     {{> reply}}
