Remove replies and switch to just mentions for main timeline

--- a/client/templates/twitterTimeline.html
+++ b/client/templates/twitterTimeline.html
@@ -1,7 +1,7 @@
 <template name="twitterTimeline">
   {{> viewLink}}
-  <h1>Tweets</h1>
-  <button class="pending">Show {{pendingTweetCount}} new Tweets</button>
+  <h1>Mentions</h1>
+  <button class="pending">Show {{pendingTweetCount}} new Mentions</button>
   {{> pages}}
   {{> pagesNav}}
 
