Move template js into separate files and use route subscriptions

--- a/client/templates/viewLink.html
+++ b/client/templates/viewLink.html
@@ -5,7 +5,7 @@
     {{/linkTo}}
   {{else}}
     {{#linkTo route="tweets"}}
-      View Tweets
+      View Mentions
     {{/linkTo}}
   {{/if}}
 </template>
