--- a/client/templates/postTicketModal.html
+++ b/client/templates/postTicketModal.html
@@ -1,5 +1,5 @@
 <template name="postTicketModal">
-  <h2>Create Ticket</h2>
+  <h2>New Ticket</h2>
   <label>
     Summary
     <input id="ticketSummary" type="text" name="ticketSummary"/>
