--- a/client/templates/tweet.html
+++ b/client/templates/tweet.html
@@ -5,6 +5,6 @@
     <li><strong>Source: </strong>{{content.source}}</li>
     <li><strong>User: </strong>{{content.user.name}}</li>
     <li><button class="modal postReply" data-modal-template="postReplyModal">Reply</button></li>
-    <li><button class="modal openTicket" data-modal-template="postTicketModal">Open Ticket</button></li>
+    <li><button class="modal ticketAction" data-modal-template="ticketActionModal">Ticket Action</button></li>
   </ul>
 </template>
