Add ticket and comment tracking, rearrange files again

--- a/client/templates/html/appBody.html
+++ b/client/templates/html/appBody.html
@@ -1,7 +1,8 @@
 <template name="appBody">
   {{> loginButtons}}
-  {{> viewLink}}
   {{#if currentUser}}
+    {{> viewLink}}
+    {{> flashMessages}}
     {{> modal}}
     {{> yield}}
   {{/if}}
