--- a/client/templates/html/modal.html
+++ b/client/templates/html/modal.html
@@ -1,6 +1,6 @@
 <template name="modal">
   {{#if activeModal}}
-    <div class="modal">
+    <div class="openModal">
       {{> Template.dynamic template=activeModal data=modalData}}
     </div>
   {{/if}}
