--- a/client/templates/html/viewLink.html
+++ b/client/templates/html/viewLink.html
@@ -1,11 +1,11 @@
 <template name="viewLink">
   {{#if currentlyOnTweets}}
     {{#linkTo route="messages"}}
-      View Messages
+      Messages
     {{/linkTo}}
   {{else}}
     {{#linkTo route="tweets"}}
-      View Mentions
+      Mentions
     {{/linkTo}}
   {{/if}}
 </template>
