--- a/client/templates/html/appBody.html
+++ b/client/templates/html/appBody.html
@@ -1,9 +1,30 @@
 <template name="appBody">
-  {{> loginButtons}}
-  {{#if currentUser}}
-    {{> viewLink}}
-    {{> flashMessages}}
-    {{> modal}}
-    {{> yield}}
-  {{/if}}
+  <div class="inner">
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#paratweet-navbar-collapse" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Paratweet</a>
+        </div>
+        <div class="collapse navbar-collapse" id="paratweet-navbar-collapse">
+          <ul class="nav navbar-nav navbar-right">
+            {{#if currentUser}}
+              <li>{{> viewLink}}</li>
+            {{/if}}
+            {{> loginButtons}}
+          </ul>
+        </div>
+      </div>
+    </nav>
+    {{#if currentUser}}
+      {{> flashMessages}}
+      {{> modal}}
+      {{> yield}}
+    {{/if}}
+  </div>
 </template>
