--- a/client/templates/html/postReplyMessageModal.html
+++ b/client/templates/html/postReplyMessageModal.html
@@ -1,8 +1,24 @@
 <template name="postReplyMessageModal">
-  <h2>Post Reply</h2>
-  <textarea id="messageBox"></textarea>
-  <div>
-    <button class="postMessage">Send message</button>
-    <button class="closeModal">Close</button>
+  <div class="modal fade" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title">New Message</h4>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="form-group">
+              <label for="message-text" class="control-label">Text:</label>
+              <textarea class="form-control" id="message-text"></textarea>
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary postMessage">Send</button>
+        </div>
+      </div>
+    </div>
   </div>
 </template>
