--- a/client/templates/html/postTicketCommentModal.html
+++ b/client/templates/html/postTicketCommentModal.html
@@ -1,30 +1,40 @@
 <template name="postTicketCommentModal">
-  <h2>New Ticket Comment</h2>
-  {{#if openTickets}}
-    <label>
-      Ticket
-      <select id="ticket-select">
-        {{#each openTickets}}
-          <option value="{{this.id}}">#{{this.id}} {{this.summary}}</option>
-        {{/each}}
-      </select>
-    </label>
-  {{else}}
-    <pre>Loading...</pre>
-  {{/if}}
-
-  <label>
-    Body
-    <input id="ticketCommentBody" type="text" name="ticketCommentBody"/>
-  </label>
-
-  <label>
-    Public
-    <input id="ticketCommentPublic" type="checkbox" checked />
-  </label>
-
-  <div>
-    <button class="postTicketComment">Create Ticket Comment</button>
-    <button class="closeModal">Close</button>
+  <div class="modal fade" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title">New Ticket Comment</h4>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="form-group">
+              <label for="ticket-select" class="control-label">Ticket:</label>
+              <select class="form-control" id="ticket-select">
+                {{#each openTickets}}
+                  <option value="{{this.id}}">#{{this.id}} {{this.summary}}</option>
+                {{/each}}
+              </select>
+            </div>
+            <div class="form-group">
+              <label for="ticket-comment-body" class="control-label">Body:</label>
+              <textarea class="form-control" id="ticket-comment-body"></textarea>
+            </div>
+            <div class="form-group">
+              <div class="checkbox">
+                <label>
+                  <input type="checkbox" id="ticket-comment-public" checked>
+                  Public
+                </label>
+              </div>
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary postTicketComment">Create</button>
+        </div>
+      </div>
+    </div>
   </div>
 </template>
