--- a/client/templates/html/postTicketModal.html
+++ b/client/templates/html/postTicketModal.html
@@ -1,41 +1,44 @@
 <template name="postTicketModal">
-  <h2>New Ticket</h2>
-  <label>
-    Summary
-    <input id="ticketSummary" type="text" name="ticketSummary"/>
-  </label>
-
-  <label>
-    Description
-    <input id="ticketDescription" type="text" name="ticketDescription"/>
-  </label>
-
-  {{#if proUsers}}
-    <label>
-      Assignee
-      <select id="assignee-select">
-        <option disabled="disabled" selected="selected">Please Select</option>
-          {{#each proUsers}}
-            <option value="{{this.id}}">{{this.first_name}} {{this.last_name}}</option>
-          {{/each}}
-      </select>
-    </label>
-  {{else}}
-    <pre>Loading...</pre>
-  {{/if}}
-
-  <label>
-    Priority
-    <select id="priority-select">
-      <option disabled="disabled" selected="selected">Please Select</option>
-        {{#each priorities}}
-          <option value="{{this}}">{{this}}</option>
-        {{/each}}
-    </select>
-  </label>
-
-  <div>
-    <button class="postTicket">Create Ticket</button>
-    <button class="closeModal">Close</button>
+  <div class="modal fade" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title">New Ticket</h4>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="form-group">
+              <label for="ticket-summary" class="control-label">Summary:</label>
+              <input type="text" class="form-control" id="ticket-summary">
+            </div>
+            <div class="form-group">
+              <label for="ticket-description" class="control-label">Description:</label>
+              <textarea class="form-control" id="ticket-description"></textarea>
+            </div>
+            <div class="form-group">
+              <label for="ticket-priority-select" class="control-label">Priority:</label>
+              <select class="form-control" id="ticket-priority-select">
+                {{#each priorities}}
+                  <option value="{{this}}">{{this}}</option>
+                {{/each}}
+              </select>
+            </div>
+            <div class="form-group">
+              <label for="ticket-assignee-select" class="control-label">Assignee:</label>
+              <select class="form-control" id="ticket-assignee-select">
+                {{#each proUsers}}
+                  <option value="{{this.id}}">{{this.first_name}} {{this.last_name}}</option>
+                {{/each}}
+              </select>
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary postTicket">Create</button>
+        </div>
+      </div>
+    </div>
   </div>
 </template>
