--- a/client/templates/html/tweet.html
+++ b/client/templates/html/tweet.html
@@ -1,20 +1,27 @@
 <template name="tweet">
-  <h4>{{content.created_at}}</h4>
-  <ul>
-    <li><strong>Text: </strong>{{content.text}}</li>
-    <li><strong>Source: </strong>{{content.source}}</li>
-    <li><strong>User: </strong>{{content.user.name}}</li>
-    <li><button type="button" class="btn btn-default openModal postReply" data-modal-template="postReplyModal">Reply</button></li>
-    <li><button type="button" class="btn btn-default openModal ticketAction" data-modal-template="ticketActionModal">Ticket Action</button></li>
+  <div class="pt-tweet">
+    <img src={{content.user.profile_image_url}} class="img-responsive" alt="Profile image">
+    <span>{{content.user.name}} (@{{content.user.screen_name}})</span>
+    <span>{{getProperDate}}</span>
+    <p class="pt-tweet_text">
+      {{content.text}}
+    </p>
+    <button type="button" class="btn btn-default openModal" data-modal-template="postReplyModal">Reply</button>
+    <button type="button" class="btn btn-default openModal" data-modal-template="postTicketModal">New Ticket</button>
+    <button type="button" class="btn btn-default openModal" data-modal-template="postTicketCommentModal">New Ticket Comment</button>
     {{#if existingTickets}}
-      {{#each existingTickets}}
-        <li>Ticket #{{this.content.id}} opened</li>
-      {{/each}}
+      <ul>
+        {{#each existingTickets}}
+          <li>Ticket #{{this.content.id}} opened</li>
+        {{/each}}
+      </ul>
     {{/if}}
     {{#if existingComments}}
-      {{#each existingComments}}
-        <li>Comment on Ticket #{{this.ticketId}}</li>
-      {{/each}}
+      <ul>
+        {{#each existingComments}}
+          <li>Comment on Ticket #{{this.ticketId}}</li>
+        {{/each}}
+      </ul>
     {{/if}}
-  </ul>
+  </div>
 </template>
