--- a/client/templates/html/twitterMessages.html
+++ b/client/templates/html/twitterMessages.html
@@ -1,6 +1,17 @@
 <template name="twitterMessages">
-  <h1>Messages</h1>
-  <button class="pending">Show {{pendingMessageCount}} new Messages</button>
+  <div class="row">
+    <div class="col-sm-10">
+      <h3>Your Messages</h3>
+    </div>
+    <div class="col-sm-2">
+      {{#if pendingMessageCount}}
+        <button class="btn btn-primary btn-sm btn-block pending">
+          <span class="glyphicon glyphicon-refresh"></span>&nbsp;
+          {{pendingMessageCount}} new
+        </button>
+      {{/if}}
+    </div>
+  </div>
   {{> pages}}
   {{> pagesNav}}
 
