--- a/client/templates/html/twitterTimeline.html
+++ b/client/templates/html/twitterTimeline.html
@@ -1,6 +1,17 @@
 <template name="twitterTimeline">
-  <h1>Mentions</h1>
-  <button class="pending">Show {{pendingTweetCount}} new Mentions</button>
+  <div class="row">
+    <div class="col-sm-10">
+      <h3>Your Mentions</h3>
+    </div>
+    <div class="col-sm-2">
+      {{#if pendingTweetCount}}
+        <button class="btn btn-primary btn-sm btn-block pending">
+          <span class="glyphicon glyphicon-refresh"></span>&nbsp;
+          {{pendingTweetCount}} new
+        </button>
+      {{/if}}
+    </div>
+  </div>
   {{> pages}}
   {{> pagesNav}}
 
