--- a/client/templates/css/userBanner.css
+++ b/client/templates/css/userBanner.css
@@ -12,6 +12,7 @@
 
 .pt-screen-name-container.pt-col-abs .pt-screen-name-box {
   background-color: rgba(0, 0, 0, 0.3);
+  border-radius: 3px;
   color: #fff;
   display: inline-block;
   padding: 20px;
