--- a/client/templates/html/userBanner.html
+++ b/client/templates/html/userBanner.html
@@ -5,7 +5,8 @@
         <div class="col-sm-12">
           <div class="col-sm-10 col-sm-offset-1 pt-screen-name-container pt-col-abs">
             <div class="pt-screen-name-box">
-              <h2>@{{screenName}}</h2>
+              <h2>{{userName}}</h2>
+              <h4>@{{screenName}}</h4>
             </div>
           </div>
           <img src={{bannerImage}} class="img-responsive" alt="Banner image">
