Fix some ui issues and restyled login page

--- a/client/templates/css/tweet.css
+++ b/client/templates/css/tweet.css
@@ -11,8 +11,18 @@
   color: rgb(202, 35, 129);
 }
 
-.reply-btn:hover {
+.reply-btn:hover,
+.reply-btn:focus {
   background-color: rgba(202, 35, 129, 0.1);
+  border-color: rgb(202, 35, 129);
+  color: rgb(202, 35, 129);
+}
+
+.open > .reply-btn:active,
+.reply-btn:active,
+.reply-btn:active:hover,
+.reply-btn:active:focus {
+  background-color: rgba(202, 35, 129, 0.2);
   border-color: rgb(202, 35, 129);
   color: rgb(202, 35, 129);
 }
@@ -21,9 +31,26 @@
   vertical-align: -1px;
 }
 
-.new-ticket-btn {
+.pt-actions-dropdown {
   margin-top: 5px;
   background-color: rgb(147, 208, 55);
   border: none;
+  color: #fff;
+}
+
+.open > .dropdown-toggle.pt-actions-dropdown,
+.open > .dropdown-toggle.pt-actions-dropdown:hover,
+.open > .dropdown-toggle.pt-actions-dropdown:focus,
+.pt-actions-dropdown:hover,
+.pt-actions-dropdown:focus {
+  background-color: rgba(147, 208, 55, 0.8);
+  color: #fff;
+}
+
+.open > .dropdown-toggle.pt-actions-dropdown:active,
+.pt-actions-dropdown:active,
+.pt-actions-dropdown:active:hover,
+.pt-actions-dropdown:active:focus {
+  background-color: rgb(132, 187, 49);
   color: #fff;
 }
