--- a/client/templates/html/postTicketCommentModal.html
+++ b/client/templates/html/postTicketCommentModal.html
@@ -23,7 +23,7 @@
             <div class="form-group">
               <div class="checkbox">
                 <label>
-                  <input type="checkbox" id="ticket-comment-public" checked>
+                  <input type="checkbox" id="ticket-comment-public">
                   Public
                 </label>
               </div>
