--- a/client/templates/html/tweet.html
+++ b/client/templates/html/tweet.html
@@ -21,19 +21,19 @@
         <span class="glyphicon glyphicon-send"></span>&nbsp;Reply
       </button>
       <div class="dropdown">
-        <button class="btn btn-default btn-block btn-sm dropdown-toggle new-ticket-btn pt-actions-dropdown" type="button" id="actionsDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+        <button class="btn btn-default btn-block btn-sm dropdown-toggle pt-actions-dropdown" type="button" id="actionsDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
           Paratweet
           <span class="caret"></span>
         </button>
         <ul class="dropdown-menu" aria-labelledby="actionsDropdown">
           <li>
             <a href="#" class="openModal" data-modal-template="postTicketModal">
-              New Ticket
+              Create New Ticket
             </a>
           </li>
           <li>
             <a href="#" class="openModal" data-modal-template="postTicketCommentModal">
-              New Ticket Comment
+              Add Comment to Ticket
             </a>
           </li>
         </ul>
