--- a/client/templates/html/postReplyModal.html
+++ b/client/templates/html/postReplyModal.html
@@ -20,7 +20,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary postReply">Create</button>
+          <button type="button" class="btn btn-primary postReply">Tweet</button>
         </div>
       </div>
     </div>
