--- a/client/templates/css/appBody.css
+++ b/client/templates/css/appBody.css
@@ -8,8 +8,17 @@ body.pg-loaded > .inner {
   display: block;
 }
 
+.pt-nav-container {
+  background-color: rgb(18, 123, 156);
+}
+
+.pt-nav-container .container {
+  padding-left: 0;
+  padding-right: 0;
+}
+
 .pt-navbar {
-  background-color: rgb(3, 123, 158);
+  background-color: rgb(18, 123, 156);
   border: none;
   border-radius: 0;
   color: #fff;
