--- a/client/templates/html/appBody.html
+++ b/client/templates/html/appBody.html
@@ -1,25 +1,27 @@
 <template name="appBody">
   <div class="inner">
     {{#if currentUser}}
-      <nav class="navbar navbar-default pt-navbar">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#paratweet-navbar-collapse" aria-expanded="false">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Paratweet</a>
-          </div>
-          <div class="collapse navbar-collapse" id="paratweet-navbar-collapse">
-            <ul class="nav navbar-nav navbar-right">
-              <li>{{> viewLink}}</li>
-              {{> loginButtons}}
-            </ul>
-          </div>
-        </div>
-      </nav>
+      <div class="pt-nav-container">
+      <div class="container">
+        <nav class="navbar navbar-default pt-navbar">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#paratweet-navbar-collapse" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="#">Paratweet</a>
+            </div>
+            <div class="collapse navbar-collapse" id="paratweet-navbar-collapse">
+              <ul class="nav navbar-nav navbar-right">
+                <li>{{> viewLink}}</li>
+                {{> loginButtons}}
+              </ul>
+            </div>
+        </nav>
+      </div>
+      </div>
       {{> userBanner}}
       <div class="container pt-tweet-timeline">
         {{> flashMessages}}
