--- a/client/templates/html/twitterMessages.html
+++ b/client/templates/html/twitterMessages.html
@@ -1,21 +1,10 @@
 <template name="twitterMessages">
-  <div class="row">
-    <div class="col-sm-10">
-      <h3>Your Messages</h3>
-    </div>
-    <div class="col-sm-2">
-      {{#if pendingMessageCount}}
-        <button class="btn btn-primary btn-sm btn-block pending">
-          <span class="glyphicon glyphicon-refresh"></span>&nbsp;
-          {{pendingMessageCount}} new
-        </button>
-      {{/if}}
-    </div>
-  </div>
   {{> pages}}
   {{> pagesNav}}
 
-  <!--
-  <pre>{{rawData}}</pre>
-  -->
+  {{#unless messagesNotEmpty}}
+    <div class="row pt-empty-collection pt-color-lt-gray">
+      <h4>No Direct Messages to show</h4>
+    </div>
+  {{/unless}}
 </template>
