--- a/client/templates/html/userBanner.html
+++ b/client/templates/html/userBanner.html
@@ -1,15 +1,19 @@
 <template name="userBanner">
   {{#if bannerImage}}
-    <div class="container-fluid">
+    <div class="container-fluid pt-banner">
       <div class="row pt-row-no-padding">
         <div class="col-sm-12">
-          <div class="col-sm-10 col-sm-offset-1 pt-screen-name-container pt-col-abs">
+          <img src={{bannerImage}} class="img-responsive" alt="Banner image">
+        </div>
+      </div>
+      <div class="container">
+        <div class="row pt-row-no-padding pt-row-abs">
+          <div class="col-sm-12 pt-screen-name-container pt-col-abs">
             <div class="pt-screen-name-box">
               <h2>{{userName}}</h2>
               <h4>@{{screenName}}</h4>
             </div>
           </div>
-          <img src={{bannerImage}} class="img-responsive" alt="Banner image">
         </div>
       </div>
     </div>
