--- a/client/templates/css/global.css
+++ b/client/templates/css/global.css
@@ -5,7 +5,7 @@
 
 /**
  * colors
- * green: #8AC13C;
+ * green: #8AC13C; rgb(138, 193, 60);
  * blue: #127B9C;
  */
 
@@ -37,4 +37,85 @@ body {
 
 button.btn-link, button.btn-link:hover, button.btn-link:focus {
   color: #8AC13C;
+}
+
+/**
+ * modal styles, overriding bootstrap styles
+ */
+
+.modal-content {
+  overflow: hidden;
+}
+
+.modal-header {
+  background-color: #127B9C;
+  border: none;
+  color: #fff;
+  padding: 10px 30px;
+}
+
+.modal-header .close {
+  margin-top: -5px;
+}
+
+.modal-title {
+  font-weight: 100;
+}
+
+.modal-header .close {
+  color: #fff;
+  opacity: 1;
+  font-family: sans-serif;
+  font-size: 30px;
+  font-weight: 100;
+}
+
+.modal-body {
+  padding: 30px;
+  padding-bottom: 0;
+}
+
+.modal-body .form-control {
+  border: none;
+  box-shadow: none;
+  background-color: #f5f5f5;
+}
+
+.modal-footer {
+  border: none;
+  padding: 20px 30px;
+}
+
+.modal-footer .btn {
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
+.modal-footer .btn-primary {
+  background-color: #8AC13C;
+  border: none;
+}
+
+.modal-footer .btn-primary:hover,
+.modal-footer .btn-primary:active,
+.modal-footer .btn-primary:focus {
+  background-color: rgba(138, 193, 60, .9);
+  border: none;
+}
+
+.modal-footer .btn-default {
+  background-color: #f5f5f5;
+  border: none;
+  color: #878186;
+}
+
+.modal-footer .btn-default:hover,
+.modal-footer .btn-default:active,
+.modal-footer .btn-default:focus {
+  background-color: #e6e6e6;
+  border: none;
+}
+
+.modal-footer .btn + .btn {
+  margin-left: 10px;
 }
