--- a/client/templates/html/postReplyMessageModal.html
+++ b/client/templates/html/postReplyMessageModal.html
@@ -3,20 +3,30 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title">New Message</h4>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          <h4 class="modal-title">
+            New Message
+          </h4>
         </div>
         <div class="modal-body">
           <form>
             <div class="form-group">
-              <label for="message-text" class="control-label">Text:</label>
+              <label for="message-text" class="control-label">
+                Text
+              </label>
               <textarea class="form-control" id="message-text"></textarea>
             </div>
           </form>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary postMessage">Reply</button>
+          <button type="button" class="btn btn-default" data-dismiss="modal">
+            Close
+          </button>
+          <button type="button" class="btn btn-primary postMessage">
+            Reply
+          </button>
         </div>
       </div>
     </div>
