--- a/client/templates/html/postReplyModal.html
+++ b/client/templates/html/postReplyModal.html
@@ -3,24 +3,36 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title">New Reply</h4>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          <h4 class="modal-title">
+            New Reply
+          </h4>
         </div>
         <div class="modal-body">
           <form>
             <div class="form-group">
-              <label for="reply-body" class="control-label">Body:</label>
+              <label for="reply-body" class="control-label">
+                Body
+              </label>
               <textarea class="form-control" id="reply-body"></textarea>
             </div>
             <div class="form-group">
-              <label class="sr-only">Character Count</label>
+              <label class="sr-only">
+                Character Count
+              </label>
               <p>{{remainingCharCount}}</p>
             </div>
           </form>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary postReply">Tweet</button>
+          <button type="button" class="btn btn-default" data-dismiss="modal">
+            Close
+          </button>
+          <button type="button" class="btn btn-primary postReply">
+            Tweet
+          </button>
         </div>
       </div>
     </div>
