--- a/client/templates/html/postTicketCommentModal.html
+++ b/client/templates/html/postTicketCommentModal.html
@@ -3,22 +3,32 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title">New Ticket Comment</h4>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          <h4 class="modal-title">
+            New Ticket Comment
+          </h4>
         </div>
         <div class="modal-body">
           <form>
             <div class="form-group">
-              <label for="ticket-select" class="control-label">Ticket:</label>
+              <label for="ticket-select" class="control-label">
+                Ticket
+              </label>
               <select class="form-control" id="ticket-select">
                 {{#each openTickets}}
-                  <option value="{{this.id}}">#{{this.id}} {{this.summary}}</option>
+                  <option value="{{this.id}}">
+                    #{{this.id}} {{this.summary}}
+                  </option>
                 {{/each}}
               </select>
             </div>
             <div class="form-group">
-              <label for="ticket-comment-body" class="control-label">Body:</label>
-              <textarea class="form-control" id="ticket-comment-body"></textarea>
+              <label for="ticket-comment-body" class="control-label">
+                Body
+              </label>
+              <textarea class="form-control" id="ticket-comment-body" rows="4"></textarea>
             </div>
             <div class="form-group">
               <div class="checkbox">
@@ -31,8 +41,12 @@
           </form>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary postTicketComment">Create</button>
+          <button type="button" class="btn btn-default" data-dismiss="modal">
+            Close
+          </button>
+          <button type="button" class="btn btn-primary postTicketComment">
+            Create
+          </button>
         </div>
       </div>
     </div>
