--- a/client/templates/html/postTicketModal.html
+++ b/client/templates/html/postTicketModal.html
@@ -4,20 +4,28 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title">New Ticket</h4>
+          <h4 class="modal-title">
+            New Ticket
+          </h4>
         </div>
         <div class="modal-body">
           <form>
             <div class="form-group">
-              <label for="ticket-summary" class="control-label">Summary:</label>
+              <label for="ticket-summary" class="control-label">
+                Summary
+              </label>
               <input type="text" class="form-control" id="ticket-summary">
             </div>
             <div class="form-group">
-              <label for="ticket-description" class="control-label">Description:</label>
-              <textarea class="form-control" id="ticket-description"></textarea>
+              <label for="ticket-description" class="control-label">
+                Description
+              </label>
+              <textarea class="form-control" id="ticket-description" rows="4"></textarea>
             </div>
             <div class="form-group">
-              <label for="ticket-priority-select" class="control-label">Priority:</label>
+              <label for="ticket-priority-select" class="control-label">
+                Priority
+              </label>
               <select class="form-control" id="ticket-priority-select">
                 {{#each priorities}}
                   <option value="{{this}}">{{this}}</option>
@@ -25,18 +33,26 @@
               </select>
             </div>
             <div class="form-group">
-              <label for="ticket-assignee-select" class="control-label">Assignee:</label>
+              <label for="ticket-assignee-select" class="control-label">
+                Assignee
+              </label>
               <select class="form-control" id="ticket-assignee-select">
                 {{#each proUsers}}
-                  <option value="{{this.id}}">{{this.first_name}} {{this.last_name}}</option>
+                  <option value="{{this.id}}">
+                    {{this.first_name}} {{this.last_name}}
+                  </option>
                 {{/each}}
               </select>
             </div>
           </form>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary postTicket">Create</button>
+          <button type="button" class="btn btn-default" data-dismiss="modal">
+            Close
+          </button>
+          <button type="button" class="btn btn-primary postTicket">
+            Create
+          </button>
         </div>
       </div>
     </div>
