--- a/client/templates/html/appBody.html
+++ b/client/templates/html/appBody.html
@@ -11,12 +11,16 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Paratweet</a>
+              <a class="navbar-brand" href="#">
+                Paratweet
+              </a>
             </div>
             <div class="collapse navbar-collapse" id="paratweet-navbar-collapse">
               <ul class="nav navbar-nav navbar-right">
                 <li>
-                  <a href="#">Feedback</a>
+                  <a class="openModal" href="#" data-modal-template="postFeedbackModal">
+                    Feedback
+                  </a>
                 </li>
                 {{> loginButtons}}
               </ul>
@@ -40,8 +44,10 @@
             </div>
           </div>
         {{/if}}
-        <div class="row pt-row-no-padding">
-          {{> flashMessages}}
+        <div class="row pt-row-no-padding pt-alerts">
+          {{#unless modalOpen}}
+            {{> flashMessages}}
+          {{/unless}}
         </div>
         {{> yield}}
       </div>
