--- a/client/templates/html/login.html
+++ b/client/templates/html/login.html
@@ -2,12 +2,17 @@
   <div class="inner">
     <div class="pt-login-page">
       <div class="pt-login-block pt-rounded-shadow-box">
-        <h2 class="pt-color-blue">Welcome to Paratweet!</h2>
+        {{> flashMessages}}
+        <h2 class="pt-color-blue">
+          Welcome to Paratweet!
+        </h2>
         <h4 class="pt-color-blue">
           To get started, we'll need you to sign in with Twitter.
         </h4>
         {{> loginButtons}}
-        <button type="button" class="btn btn-link">Contact</button>
+        <button type="button" class="btn btn-link openModal">
+          Contact
+        </button>
       </div>
     </div>
   </div>
